[project]
name = "quintbench-runner"
version = "0.1.0"
description = "Pier subclass that runs mini-swe-agent with the Quint-assisted-implementation skill, for the DeepSWE / Harbor benchmark."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # Pinned conservatively — verified end-to-end against 0.2.0 only.
    # Loosen once a newer Pier passes a smoke run.
    "datacurve-pier>=0.2,<0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["quintbench_runner*"]
